# AIFX010_Truth_Tone

./: .env.example  .gitignore  .pre-commit-config.yaml  MAKE.md  Makefile  README.md  download_datasets.py  pyproject.toml
.github/workflows/: ci.yml
apps/zoo/: feature_extraction_ambient.py  feature_extraction_enf.py  feature_extraction_mfcc.py  fusion_run.py  fusion_train.py  inference.py  preprocess.py
configs/: base.yaml
docker/: Dockerfile.app  Dockerfile.mlflow  compose.yml
frontend/: index.html
ml/factory/pipeline/task_0_data/: build_manifests.py  run.sh
ml/factory/pipeline/task_1_preprocess/: extract_features.py  run.sh
ml/factory/pipeline/task_3_train/: run.sh  train_clip_classifier.py
ml/factory/pipeline/task_4_eval/: eval_batch.py  make_report.py  predict.py  predict_batch.py  run.sh  run_batck.sh  run_make_report.sh
research/sample_data/: enf_log.csv  fusion_train_example.csv
scripts/: generate_splices.py  prepare_dataset.py
src/dspfusion/: __init__.py  cli.py
src/dspfusion/detectors/: ambientdet.py  enfdet.py  locutor.py
src/dspfusion/features/: ambient.py  enf.py  mfcc.py
src/dspfusion/preproc/: base.py
src/dspfusion/service/: api.py  run.py
src/dspfusion/utils/: fusion.py
src/hoaxhertz/: __init__.py  pipeline.py
src/hoaxhertz/detectors/: detect_splicing.py  enf_align.py  predict_clip_classifier.py
src/hoaxhertz/features/: __init__.py  ambient.py  enf.py  mfcc.py
src/hoaxhertz/preproc/: __init__.py
src/hoaxhertz/preproc/utils/: __init__.py  viz.py
tests/: test_imports.py
