[project]
name = "dspfusion"
version = "0.1.0"
description = "Detecção de splicing de voz (DSP/ML clássico)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Seu Nome"}]
license = {text = "MIT"}
dependencies = [
  "numpy", "scipy", "pandas", "librosa", "soundfile", "webrtcvad",
  "scikit-learn", "tqdm", "pydantic>=2", "pyyaml", "matplotlib",
  "mlflow", "fastapi", "uvicorn[standard]", "python-dotenv",
  "pyroomacoustics"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black", "mypy", "types-PyYAML"]

[project.scripts]
dspfusion-batch = "dspfusion.cli:main"
dspfusion-serve = "dspfusion.service.run:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
